Updated code docs, altered some attribute/variable names to be more clear

--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -52,21 +52,14 @@
     "from sklearn.metrics import confusion_matrix\n",
     "import utility.utility as util\n",
     "import utility.CustomTrainer as ct\n",
-    "import utility.ModelConfig as mc\n",
-    "\n",
-    "# turn off warnings\n",
-    "#logging.set_verbosity_error()\n",
-    "\n",
-    "# resets import once changes have been applied\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import utility.ModelConfig as mc"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Disable TQDM, for output"
+    "# Global Settings:"
    ]
   },
   {
@@ -76,16 +69,28 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "disable tqdm\n",
+    "Filepath to project-root folder, needs to be set manually if not directly called from project folder.\n",
     "\"\"\"\n",
-    "_disable_tqdm = False"
+    "path_cwd = os.getcwd()\n",
+    "\n",
+    "\"\"\"\n",
+    "Disables/enables progress bars during training of model.\n",
+    "-\"True\": no progress bars shown during training\n",
+    "-\"False\": progress bars shown during training\n",
+    "\"\"\"\n",
+    "_disable_tqdm = False\n",
+    "\n",
+    "\"\"\"\n",
+    "Name of ModelConfig file created during HPS\n",
+    "\"\"\"\n",
+    "_name_config_file = \"ModelConfig_camembert-base_French_ConsUncons_31_01_24_00_42.pkl\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load Config File"
+    "# Load ModelConfig"
    ]
   },
   {
@@ -95,27 +100,10 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "path to local\n",
-    "\"\"\"\n",
-    "path_cwd = os.getcwd()\n",
-    "\n",
-    "\"\"\"\n",
-    "name of modelconfig file\n",
-    "\"\"\"\n",
-    "_name_config_file = \"ModelConfig_camembert-base_French_ConsUncons_31_01_24_00_42.pkl\"\n",
-    "\n",
-    "\"\"\"\n",
     "path to file with modelconfig\n",
     "\"\"\"\n",
-    "path_file_modelconfig = os.path.join(\"modelconfigs\", _name_config_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "path_file_modelconfig = os.path.join(\"modelconfigs\", _name_config_file)\n",
+    "\n",
     "model_config = None\n",
     "with open(os.path.join(path_cwd, path_file_modelconfig), \"rb\") as f:\n",
     "    model_config = pickle.load(f)"
@@ -127,12 +115,7 @@
     "id": "IrZ91MToIwEf"
    },
    "source": [
-    "# Meta Variables\n",
-    "- base model\n",
-    "- loss function\n",
-    "- evaluation metrics\n",
-    "- best model metric\n",
-    "- number of trials\n"
+    "# Metadata read from ModelConfig"
    ]
   },
   {
@@ -144,100 +127,85 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "timestamp\n",
+    "Timestamp of final training. Used for file and directory naming schemes.\n",
     "\"\"\"\n",
     "timestamp = datetime.now().strftime(\"%d_%m_%y_%H_%M\")\n",
     "model_config.timestamp_final = datetime.now().strftime(\"%d_%m_%y_%H_%M\")\n",
     "\n",
     "\"\"\"\n",
-    "number of labels\n",
-    "\n",
+    "Number of labels.\n",
     "\"\"\"\n",
     "num_labels = model_config.num_labels\n",
     "\n",
     "\"\"\"\n",
-    "Base BERT model to be used during finetuning.\n",
-    "This has to be picked from the pre-trained models on HuggingFace\n",
-    "in order to be compatible with the Trainer API\n",
+    "Pretrained transformer base model.\n",
     "\"\"\"\n",
     "base_model = model_config.base_model\n",
-    "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "base_model_altered = re.sub(r'/', '___', base_model)\n",
     "\n",
     "\"\"\"\n",
-    "if the _base_model already has been finetuned on a different task \n",
-    "we need to reset its classification head to allow for different labels\n",
-    "and number of labels\n",
+    "Boolean flag to reset classification head.\n",
     "\"\"\"\n",
     "reset_model_head = model_config.reset_model_head\n",
     "\n",
     "\"\"\"\n",
-    "Directory Paths:\n",
+    "Directory path to final training data.\n",
     "\"\"\"\n",
     "path_final_training =  os.path.join(\"training_data\" , base_model_altered, \"final_training\" + \"_\" + timestamp)\n",
     "model_config.path_final_training = path_final_training\n",
     "\n",
     "\"\"\"\n",
-    "Three custom loss functions have been implemented:\n",
-    "  f1: soft-f1 macro score\n",
-    "  mcc: soft-mcc\n",
-    "  wce: weighted cross entropy\n",
-    "  ce: standard cross entropy\n",
+    "Loss function.\n",
     "\"\"\"\n",
     "loss_fct = model_config.loss_fct\n",
     "\n",
     "\"\"\"\n",
-    "weighting scheme\n",
+    "Weighting scheme name.\n",
     "\"\"\"\n",
     "weight_scheme = model_config.weight_scheme\n",
     "\n",
     "\"\"\"\n",
-    "Select weighting method when using weighted cost functions.\n",
+    "Weighting schemes.\n",
     "\"\"\"\n",
     "class_weighting_schemes = {\"rev_prop\": util.get_reverse_prop_class_weights}\n",
     "\n",
     "\"\"\"\n",
-    "class weights for weighted loss function\n",
-    "note: order is [weight for class 0, weight for class 1]\n",
+    "Class weights for weighted loss function.\n",
     "\"\"\"\n",
     "class_weights = model_config.class_weights\n",
     "\n",
     "\"\"\"\n",
-    "Metrics listed during evaluation:\n",
-    "\n",
-    "Note: adjust with desired metrics.\n",
+    "Metrics listed during training/evaluation.\n",
     "\"\"\"\n",
     "eval_metrics = model_config.eval_metrics\n",
     "\n",
     "\"\"\"\n",
-    "Employ freezing of layers, options:\n",
-    "\"unfrozen\": all layers unfrozen\n",
-    "\"frozen\": all transformer layers frozen\n",
+    "Employ freezing of layers.\n",
     "\"\"\"\n",
     "frozen = model_config.frozen\n",
     "\n",
     "\"\"\"\n",
-    "Dataset from HF-Hub or local folder\n",
+    "Location of training dataset.\n",
     "\"\"\"\n",
     "from_hub = model_config.from_hub\n",
     "\n",
     "\"\"\"\n",
-    "name of dataset to load\n",
+    "Name of dataset on HuggingFace Hub.\n",
     "\"\"\"\n",
     "dataset_name_hub = model_config.dataset_name_hub\n",
     "\n",
     "\"\"\"\n",
-    "name of dataset to load\n",
+    "Name of directory that contains the local dataset.\n",
     "\"\"\" \n",
     "dataset_name_local = model_config.dataset_name_local\n",
     "\n",
     "\"\"\"\n",
-    "path to folder with local datasets\n",
+    "Path to folder with local datasets.\n",
     "\"\"\"\n",
     "path_dataset_local = model_config.path_dataset_local\n",
     "\n",
     "\"\"\"\n",
-    "path to folder with trained model\n",
+    "Path to folder with trained model\n",
     "\"\"\"\n",
     "path_trained_model = os.path.join(\"trained_models\", base_model_altered + \"_\" + timestamp)\n",
     "model_config.path_trained_model = path_trained_model"
@@ -249,10 +217,7 @@
     "id": "hYAAghnjIzBt"
    },
    "source": [
-    "# Setup\n",
-    "\n",
-    "\n",
-    "Note: DataCollatorWithPadding allows for dynamic padding for individual batches. Only use with GPUs. For TPUs, use max_length padding attribute with Tokenizer instance."
+    "# Setup"
    ]
   },
   {
@@ -261,9 +226,7 @@
     "id": "YVotGcMsQLKC"
    },
    "source": [
-    "## Load Data\n",
-    "\n",
-    "During final training we merge the training with valdidation dataset and tune the model with the priorly found best hyperparameters"
+    "## Load Data"
    ]
   },
   {
@@ -290,6 +253,13 @@
    "outputs": [],
    "source": [
     "raw_datasets = util.load_data(from_hub, dataset_name_hub, os.path.join(path_cwd, path_dataset_local))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During final training we merge the training with valdidation dataset and train the model with the priorly found best hyperparameters."
    ]
   },
   {
@@ -389,7 +359,7 @@
     "id": "1MUIwuMIQ0Hx"
    },
    "source": [
-    "## Function that returns the Tokenizer so that we can employ data mapping.\n",
+    "## Function that returns the Tokenizer - needed to employ data mapping.\n",
     "\n",
     "Note: Adjust this to desired task."
    ]
@@ -412,7 +382,7 @@
     "id": "EwQnmO5sRKgG"
    },
    "source": [
-    "## Map Dataset with Tokenizer"
+    "## Tokenize dataset"
    ]
   },
   {
@@ -481,23 +451,31 @@
     "id": "WJWBvuj_JL8y"
    },
    "source": [
-    "# Training Arguments\n",
+    "## Create instance of TrainingArguments\n",
     "\n",
-    "First load best hyperparameters learned during HyperParameter Search.\n",
-    "Initialize TrainingArguments with loaded parameters."
+    "Initialize TrainingArguments with best_run hyperparameters found during HPS."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "O9t82JVzjz4j"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TrainingArguments' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m training_args \u001b[38;5;241m=\u001b[39m \u001b[43mTrainingArguments\u001b[49m(\n\u001b[0;32m      2\u001b[0m     output_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path_cwd, path_final_training),\n\u001b[0;32m      3\u001b[0m     save_strategy \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      4\u001b[0m     evaluation_strategy \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      5\u001b[0m     logging_strategy \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      6\u001b[0m     disable_tqdm \u001b[38;5;241m=\u001b[39m _disable_tqdm,\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_config\u001b[38;5;241m.\u001b[39mbest_run\u001b[38;5;241m.\u001b[39mhyperparameters,\n\u001b[0;32m      8\u001b[0m     )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'TrainingArguments' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"\n",
-    "Create instance of class TrainingArguments. Adjust to desired behaviour.\n",
-    "\"\"\"\n",
     "training_args = TrainingArguments(\n",
     "    output_dir = os.path.join(path_cwd, path_final_training),\n",
     "    save_strategy = \"epoch\",\n",
@@ -514,7 +492,7 @@
     "id": "tjtjOcw3JQ-E"
    },
    "source": [
-    "# Model Initialzation"
+    "## Model Initialzation"
    ]
   },
   {
@@ -540,7 +518,7 @@
     "  return model\n",
     "\n",
     "def model_init():\n",
-    "  return AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True, , ignore_mismatched_sizes = reset_model_head)\n",
+    "  return AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True, ignore_mismatched_sizes = reset_model_head)\n",
     "\n",
     "model_inits = {\"unfrozen\": model_init, \"frozen\": model_init_frozen}"
    ]
@@ -551,7 +529,7 @@
     "id": "Y_GKy0VSadKm"
    },
    "source": [
-    "# Evaluation metrics"
+    "## Create evaluation metric object and compute function to pass to Trainer."
    ]
   },
   {
@@ -634,11 +612,6 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Below we specify which performance measures we wish to observe during training\n",
-    "at the end of each step/epoch.\n",
-    "\"\"\"\n",
-    "\n",
     "clf_metrics = evaluate.combine(eval_metrics)\n",
     "\n",
     "def compute_metrics(eval_preds):\n",
@@ -723,11 +696,11 @@
     "id": "jJ7ygag4SIFV"
    },
    "source": [
-    "# (Optional) Create and assign an Optimizer and Scheduler\n",
+    "## (Optional) Create and assign an Optimizer and Scheduler\n",
     "\n",
-    "When using the HuggingFace Trainer API for hyperparameter search, we can no longer use the \"optimizer\" argument directly. Instead we customize the optimizer and scheduler\n",
+    "When using the HuggingFace Trainer API for hyperparameter search, we can no longer use the \"optimizer\" argument directly. Instead we need to create instances of both the optimizer and scheduler class, and then pass both to Trainer object.\n",
     "\n",
-    "Note: This is rather optional, as we could skip the following step and use the defaults. Inclusion in case some custom behaviour is desired."
+    "Note: This is optional, as we could skip the following step and use the defaults. Included in case some custom behaviour is desired. Remove \"#\" to uncomment passing of objects."
    ]
   },
   {
@@ -798,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DataFrame with Training Metrics per Epoch"
+    "## Save dataframe with evaluation metrics per training epoch"
    ]
   },
   {
@@ -807,15 +780,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_df = util.process_log_history(trainer.state.log_history, trainer.args.num_train_epochs)\n",
-    "model_config.training_log_df = log_df"
+    "model_config.training_log_df = util.process_log_history(trainer.state.log_history,\n",
+    "                                                        trainer.args.num_train_epochs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model predictions on test data"
+    "# Model evaluation on test data"
    ]
   },
   {
@@ -824,8 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = trainer.predict(tokenized_datasets[\"test\"])\n",
-    "model_config.predictions = predictions"
+    "predictions = trainer.predict(tokenized_datasets[\"test\"])"
    ]
   },
   {
@@ -834,7 +806,7 @@
     "id": "YSSpvaa3qhQS"
    },
    "source": [
-    "# Performance on Test-Set and Confusion Matrix"
+    "## Compute evaluation metrics and confusion matrix on test dataset"
    ]
   },
   {
@@ -843,15 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_labels = tokenized_datasets[\"test\"][\"label\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "true_labels = tokenized_datasets[\"test\"][\"label\"]\n",
     "predicted_labels = np.argmax(predictions.predictions, axis=1)"
    ]
   },
@@ -861,27 +825,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = clf_metrics.compute(true_labels, predicted_labels)\n",
-    "model_config.evaluation_results = results\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf_mat = confusion_matrix(true_labels, predicted_labels)\n",
-    "model_config.confusion_matrix = conf_mat\n",
-    "conf_mat"
+    "model_config.evaluation_results = clf_metrics.compute(true_labels, predicted_labels)\n",
+    "model_config.confusion_matrix = confusion_matrix(true_labels, predicted_labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Majority Voting (if applicable)"
+    "## Apply majority voting scheme (if applicable)"
    ]
   },
   {
@@ -901,24 +853,6 @@
     "    conf_mat_mv = confusion_matrix(true_labels_mv, predicted_labels_mv)\n",
     "model_config.evaluation_results_mv = results_mv\n",
     "model_config.confusion_matrix_mv = conf_mat_mv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_mv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf_mat_mv"
    ]
   },
   {
