Added more informational carry and extendend ModelConfig

--- a/ModelConfig_Reader.ipynb
+++ b/ModelConfig_Reader.ipynb
@@ -36,11 +36,7 @@
     "\n",
     "import sqlite3\n",
     "\n",
-    "import utility.utility as util\n",
-    "\n",
-    "# resets import once changes have been applied\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import utility.utility as util"
    ]
   },
   {
@@ -931,6 +927,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "601f63ea-133e-4411-9f99-e8864d324437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_config.predictions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 115,
    "id": "1c683bbf-cb51-444f-965c-55a77c497ed1",
    "metadata": {},
@@ -1013,6 +1019,16 @@
    ],
    "source": [
     "pd.DataFrame(model_config.confusion_matrix, columns=['Predicted Negative', 'Predicted Positive'], index=['Actual Negative', 'Actual Positive'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de32cdf8-b1b0-46e1-a95b-f852bef8a894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_config.predictions_mv_df"
    ]
   },
   {
