Changed to Inference code

--- a/Transformer_SeqClass_Inference.ipynb
+++ b/Transformer_SeqClass_Inference.ipynb
@@ -614,8 +614,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#col_descr_dict = {}\n",
-    "#col_descr_df = pd.DataFrame(col_descr_dict, orient=\"index\")"
+    "col_descr_dict = {\"label\": \"True label for sample.\",\n",
+    "                  \"id\": \"Sample ID, if segmented data this represents the segments ID.\",\n",
+    "                  \"original_id\": \"If segmented, this represents the original sample ID.\",\n",
+    "                  \"pred_logits\": \"Model's raw logit outputs.\",\n",
+    "                  \"pred_label\": \"Predicted label based on model's raw logit outputs\",\n",
+    "                  \"pred_mv_agg_logits\": \"If segmented data, raw logit outputs aggregated over each segment per original sample ID\",\n",
+    "                  \"pred_mv_agg_logits_label\": \"If segmented data, predicted label based on aggregated raw logits\",\n",
+    "                  \"pred_mv_agg_label\": \"If segmented data, predicted labels aggregated over each segment's predicted label per original sample ID\"\n",
+    "                 }\n",
+    "col_descr_df = pd.DataFrame.from_dict(col_descr_dict, columns=[\"\"], orient=\"index\")"
    ]
   },
   {
@@ -660,7 +668,7 @@
     "    pred_df.to_excel(writer, sheet_name=\"Predictions\", index=False)\n",
     "    if model_config.flag_mv:\n",
     "        pred_mv_df.to_excel(writer, sheet_name=\"Predictions_MV\", index = False)\n",
-    "    #col_descr_df.to_excel(write, sheet_name=\"Data Description\", index = True)"
+    "    col_descr_df.to_excel(writer, sheet_name=\"Data Description\", index = True)"
    ]
   }
  ],
