fixed missing comma, added requirements.txt file

--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -53,11 +53,7 @@
     "from sklearn.metrics import confusion_matrix\n",
     "import utility.utility as util\n",
     "import utility.CustomTrainer as ct\n",
-    "import utility.ModelConfig as mc\n",
-    "\n",
-    "# resets import once changes have been applied\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import utility.ModelConfig as mc"
    ]
   },
   {
