--- a/Transformer_SeqClass_Inference.ipynb
+++ b/Transformer_SeqClass_Inference.ipynb
@@ -596,7 +596,7 @@
     "             \"trained model path\": model_config.path_trained_model,\n",
     "             \"dataset\": _name_dataset_hub,\n",
     "             \"modelconfig\": _name_config_file}\n",
-    "meta_df = pd.DataFrame.from_dict(meta_dict, columns=[\"\"] orient=\"index\")"
+    "meta_df = pd.DataFrame.from_dict(meta_dict, columns=[\"\"], orient=\"index\")"
    ]
   },
   {
